# agents

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
agents/: __main__.py  agent.py  baby_action.py  baby_agent.py  cell.py  dijkstra.py  directions.py  main.py  manager.py  model_reflex_robot_agent.py  random_robot_agent.py  robot_action.py  robot_agent.py  robot_model.py  room_environment.py  statistics_model.py  thing.py
docs/: index.md
search/: search_index.json
tests/: test_agents.py
