[tool.poetry]
name = "agents"
version = "0.0.1"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/agents"
repository = "https://github.com/leynier/agents"
documentation = "https://github.com/leynier/agents"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
agents = "agents.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
